# vico

./: .gitignore  README.md  bun.lockb  middleware.ts  next.config.mjs  package-lock.json  package.json  pyrightconfig.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx  types.ts
app/api/: config.ts
app/api/agent/reset/: route.ts
app/api/agent/stream/: route.ts
app/api/hello/: route.ts
app/api/memories/: route.ts
app/api/memories/probe/: route.ts
app/api/tags/: route.ts
app/components/: Footer.tsx  assistant-container.tsx  client-wrapper.tsx  footer.tsx  markdown-renderer.tsx  memory-card.tsx  mode-toggle.tsx  response-display.tsx  search-header.tsx  search-input.tsx  search-or-chat-toggle.tsx  sidebar-layout.tsx  tag-sidebar.tsx  theme-provider.tsx  theme-toggle.tsx  thinking-box.tsx  tool-call-renderer.tsx
app/hooks/: useAutoScroll.ts
components/: response-display.tsx
components/ui/: button.tsx  dropdown-menu.tsx  textarea.tsx
data/: web_cookies.example.txt  web_headers.example.txt
data/wiki/: import.sql  pyproject.toml  update_wiki.sh
memory-adder-extension/: background.js  manifest.json  modal.js
python/: agent_profiles.py  bootstrap.sh  file_service.py  inference_service.py  memory_storage_service.py  offline_wikipedia_service.py  prompt_templates.py  pyproject.toml  run.sh  standalone_mcp_server.py  streaming_inference_service.py
python/tools/: tool_definitions.py  tool_executor.py  web_extractor.py
