[project]
name = "vico"
version = "0.1.0"
description = "A Python service for inference and memory management"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "huggingface-hub",
    "mlx-vlm",
    "pillow",
    "pydantic",
    "duckdb",
    "mlx-lm>=0.28.0",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["python"] 
