[project]
name = "vico"
version = "0.1.0"
description = "A Python service for inference and memory management"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "huggingface-hub",
    "mlx-vlm==0.3.12",
    "pillow",
    "pydantic",
    "duckdb",
    "mlx-lm==0.30.7",
    "python-dotenv",
    "torchvision",
    "playwright>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["python"] 
